--- a/style.css
+++ b/style.css
@@ -1,24 +1,26 @@
-a{
-  text-decoration: none;
-}
-a:hover {
-    transition: .3s
-}
+a {
+    text-decoration: none;
+  }
 
-body,html {
+  a:hover {
+    transition: .3s
+  }
+
+  body,
+  html {
     width: 100%;
     height: 100%;
     padding: 0;
     margin: 0;
-    background: linear-gradient( 333deg, #92c9f1, #d9b7ab, #fff6e6);
+    background: linear-gradient(333deg, #92c9f1, #d9b7ab, #fff6e6);
     border-top: 5px solid #fff6e6;
     border-bottom: 5px solid #fff6e6;
     box-sizing: border-box;
     overflow: hidden;
     font-family: 'Baloo 2', 'Noto Sans TC', sans-serif;
-}
+  }
 
-.bgmark{
+  .bgmark {
     font-size: 20rem;
     font-weight: 400;
     line-height: 25rem;
@@ -27,9 +29,9 @@ body,html {
     top: 0;
     position: absolute;
     z-index: 0;
-}
+  }
 
-.namecard {
+  .namecard {
     width: 360px;
     height: 160px;
     padding: 40px;
@@ -42,133 +44,132 @@ body,html {
     overflow: hidden;
     letter-spacing: 0.5px;
     color: #606060;
-    box-shadow:0 5px 35px -18px rgb(243 79 42 / 82%);
+    box-shadow: 0 5px 35px -18px rgb(243 79 42 / 82%);
     transition-duration: .2s;
-}
-
-.namecard:hover{
-    margin-top: 28vh;
-    box-shadow: 0px 15px 30px -20px rgb(143 79 42 / 72%)
-}
+  }
 
 
-.qr{
-   width: 140px;
-   height: 140px;
-   position: absolute;
-   right: 35px;
-   bottom: 50px;
-   background: url(https://images-ext-2.discordapp.net/external/Av8R_G99vcV7LTo66HN3oDi737zAjpGGHrXaFAf8c18/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/851062442330816522/a_492b3c7e87d2b6f95b4c23c0c71d0eff.gif?width=600&height=600);
-   border-radius: 8px;
-   background-size: cover;
-   z-index: 88;
-}
 
-.circle {
-  position: absolute;
-}
 
-.circle1{
+
+  .qr {
+    width: 140px;
+    height: 140px;
+    position: absolute;
+    right: 35px;
+    bottom: 50px;
+    background: url(https://images-ext-2.discordapp.net/external/Av8R_G99vcV7LTo66HN3oDi737zAjpGGHrXaFAf8c18/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/851062442330816522/a_492b3c7e87d2b6f95b4c23c0c71d0eff.gif?width=600&height=600);
+    border-radius: 8px;
+    background-size: cover;
+    z-index: 88;
+  }
+
+  .circle {
+    position: absolute;
+  }
+
+  .circle1 {
     width: 80px;
     height: 80px;
     border-radius: 100%;
     top: -40px;
     right: -40px;
     border: 8px solid #efe2d0;
-}
+  }
 
-.circle2{
+  .circle2 {
     width: 50px;
     height: 50px;
     border-radius: 100%;
     top: 210px;
     left: -20px;
     border: 8px solid #eddbd2;
-}
+  }
 
-.circle3{
+  .circle3 {
     width: 20px;
     height: 20px;
     border-radius: 100%;
     top: 180px;
     left: 200px;
     border: 4px solid #e7dfd8;
-}
+  }
 
-.circle4{
+  .circle4 {
     width: 60px;
     height: 40px;
     border-radius: 100%;
     bottom: -170px;
     right: -30px;
     border: 100px solid #e3e3e3;
-}
+  }
 
-.circle5{
+  .circle5 {
     width: 10px;
     height: 10px;
     border-radius: 100%;
     top: 220px;
     left: 160px;
     border: 3px solid #d5d7d9;
-}
+  }
 
-.circle6{
+  .circle6 {
     width: 10px;
     height: 10px;
     border-radius: 100%;
     bottom: 80px;
     right: -5px;
     border: 3px solid #d5d7d9;
-}
+  }
 
-.namecard h2{
-  margin-top: -5px;
-  height: 20px;
-  font-size: 26px;
-  font-weight: 600;
-  color: #606060;
-  letter-spacing: 0.5px;
-  posititon: relative;
-  z-index:88;
-}
-.namecard h3{
-  color: #606060;
-  height: 24px;
-  font-weight: 500;
-  font-size: 18px;
-  letter-spacing: 0.2px;
-}
+  .namecard h2 {
+    margin-top: -5px;
+    height: 20px;
+    font-size: 26px;
+    font-weight: 600;
+    color: #606060;
+    letter-spacing: 0.5px;
+    posititon: relative;
+    z-index: 88;
+  }
 
-.mail {
+  .namecard h3 {
+    color: #606060;
+    height: 24px;
+    font-weight: 500;
+    font-size: 18px;
+    letter-spacing: 0.2px;
+  }
+
+  .mail {
     padding-left: 25px;
     background: url('https://cdn0.iconfinder.com/data/icons/eon-social-media-contact-info-2/32/mail_email_e-mail_letter-48.png') no-repeat;
     background-size: 16px 16px;
     background-position: 0 8px;
     line-height: 30px;
     font-size: 15px;
-}
-  
-.phone {
+  }
+
+  .phone {
     padding-left: 25px;
     background: url('https://cdn0.iconfinder.com/data/icons/mobile-basic-vol-1/32/Mobile_Iphone-48.png') no-repeat;
     background-size: 16px 16px;
     background-position: 0 8px;
     line-height: 30px;
     font-size: 15px;
-}
-  
-.igid{
+  }
+
+  .igid {
     padding-left: 25px;
     background: url('https://cdn2.iconfinder.com/data/icons/social-networks-18/100/Instagram_logo-512.png') no-repeat;
     background-size: 16px 16px;
     background-position: 0 8px;
     line-height: 30px;
     font-size: 15px;
-    
-}
 
-.copy{
+  }
+
+  .copy {
     width: 100vw;
     text-align: center;
     color: #fff;
@@ -177,4 +178,30 @@ body,html {
     letter-spacing: 1.5px;
     position: absolute;
     bottom: 30px;
-}
+  }
+
+  @media only screen and (max-width: 600px) {
+    .namecard {
+      width: 160px;
+      height: 360px;
+      margin-top: 0;
+      /* 移除垂直方向的間距 */
+      transform: rotate(0);
+      margin:23%
+      /* 移除卡片的旋轉 */
+    }
+
+
+
+  }
+
+  @media only screen and (min-width: 601px) {
+    .namecard {
+      transform: rotate(0);
+    }
+
+    .namecard:hover {
+      margin-top: 28vh;
+      /* 在大屏幕上使用较大的移动幅度 */
+    }
+  }
