--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@ a {
   }
 
   .namecard {
-    width: 360px;
-    height: 160px;
+    width: 400px;
+    height: 200px;
     padding: 40px;
     margin: auto;
     margin-top: 27vh;
@@ -58,7 +58,7 @@ a {
     position: absolute;
     right: 35px;
     bottom: 50px;
-    background: url(./avatar.gif);
+    background: url(./img/avatar.jpg);
     border-radius: 8px;
     background-size: cover;
     z-index: 88;
@@ -143,7 +143,7 @@ a {
 
   .mail {
     padding-left: 25px;
-    background: url('https://cdn0.iconfinder.com/data/icons/eon-social-media-contact-info-2/32/mail_email_e-mail_letter-48.png') no-repeat;
+    background: url('./img/mail.png') no-repeat;
     background-size: 16px 16px;
     background-position: 0 8px;
     line-height: 30px;
@@ -161,7 +161,26 @@ a {
 
   .igid {
     padding-left: 25px;
-    background: url('https://cdn2.iconfinder.com/data/icons/social-networks-18/100/Instagram_logo-512.png') no-repeat;
+    background: url('./img/ig.png') no-repeat;
+    background-size: 16px 16px;
+    background-position: 0 8px;
+    line-height: 30px;
+    font-size: 15px;
+
+  }
+
+  .github {
+    padding-left: 25px;
+    background: url('./img/github.png') no-repeat;
+    background-size: 16px 16px;
+    background-position: 0 8px;
+    line-height: 30px;
+    font-size: 15px;
+
+  }
+  .info {
+    padding-left: 25px;
+    background: url('./img/info.png') no-repeat;
     background-size: 16px 16px;
     background-position: 0 8px;
     line-height: 30px;
