--- a/style.css
+++ b/style.css
@@ -206,8 +206,11 @@ a {
       margin-top: 0;
       /* 移除垂直方向的間距 */
       transform: rotate(0);
-      margin:23%
+      margin:20%
       /* 移除卡片的旋轉 */
+    }
+    .qr{
+      right: auto;
     }
 
 
